[tool.poetry]
name = "tistory-article-to-hashnode"
version = "0.1.0"
description = "Utility for Tistory article move to hashnode."
authors = ["Chan Kang <me@kentakang.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
